k8s/kustomization/overlays/dev/bases/mailhog/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  labels:
    app: mailhog
spec:
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      restartPolicy: Always
      containers:
        - name: mailhog
          image: mailhog/mailhog
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
