k8s/kustomization/overlays/dev/bases/mailhog/mailhog-http-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mailhog-http-service
spec:
  type: ClusterIP
  selector:
    app: mailhog
  ports:
    - name: mailhog-http
      port: 80
      targetPort: 8025
