k8s/kustomization/overlays/dev/bases/mailhog/mailhog-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mailhog-ingress
  namespace: starter
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mailhog.local.starter.com`)
      priority: 10
      services:
        - name: mailhog-http-service
          port: 80
  tls:
    certResolver: default
    options:
      name: mailhog-http-service
